--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "mongoose": "^6.3.8"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.16.1",
     "ts-node-dev": "^2.0.0",
     "tslint": "^6.1.3",
