--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.16.4",
     "firebase-admin": "^10.3.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.8"
   },
   "devDependencies": {
